# Dadao

./: .gitignore  README.md  meson.build  uncrustify.cfg
src/: Main.vala  Panel.vala  Panels.vala  Window.vala  meson.build
src/widgets/: Panel.vala  Settings.vala
